feat    : ⚡️ Add join validation
required:
1. email : email Format
2. password : string format between 8 and 15 characters containing numbers and alphabets
3. name : string format of less than 10 characters

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Hera",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "celebrate": "^13.0.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
